--- a/src/app/events/event-details/session-list.component.html
+++ b/src/app/events/event-details/session-list.component.html
@@ -1,4 +1,4 @@
-<div class="row" *ngFor="let session of sessions">
+<div class="row" *ngFor="let session of visibleSessions">
     <div class="col-md-10">
         <!-- <div class="well"> -->
         <!-- <collapsible-well [title]="session.name"> -->
@@ -12,7 +12,7 @@
             <!-- <div class="body"> -->
             <div well-body>
                 <h6>{{session.presenter}}</h6>
-                <span>Duration: {{session.duration}}</span><br />
+                <span>Duration: {{session.duration | duration}}</span><br />
                 <span>Level: {{session.level}}</span>
                 <p>{{session.abstract}}</p>
             </div>
