--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -10,7 +10,7 @@
             <a [routerLink]="['/events']" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}">All Events</a>
           </li>
           <li><a [routerLink]="['/events/new']" routerLinkActive="active">Create Event</a></li>
-          <li class="dropdown">
+          <!-- <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" >
               Events
               <span class="caret"></span>
@@ -20,7 +20,7 @@
                 <a href="">Angular Connect</a>
               </li>
             </ul>
-          </li>
+          </li> -->
         </ul>
         <div class="navbar-header navbar-right">
           <ul class="nav navbar-nav">
