--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -35,7 +35,7 @@
           <input (ngModel)="newEvent.city" name="city" id="city" type="text" class="form-control" placeholder="City..." />
         </div>
         <div class="col-md-6" >
-          <input (ngModel)="cnewEvent.ountry" name="country" id="country" type="text" class="form-control" placeholder="Country..." />
+          <input (ngModel)="newEvent.ountry" name="country" id="country" type="text" class="form-control" placeholder="Country..." />
         </div>
       </div>
     </div>
